Contrast Ratio error fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,7 +112,7 @@ footer p {
   margin-top: 3%;
   padding: 15px 40px;
   color: var(--white-color);
-  background-color: #219ebc;
+  background-color:#0c6f88;
   cursor: pointer;
 }
 .hero-container img {
